[tool.poetry]
name = "grand-exchanger"
version = "0.1.0"
description = "Interaction layer for the RSDB API"
authors = ["Antoine Vandermeersch <avdmeers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
desert = "^2020.1.6"
marshmallow = "^3.7.1"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
mypy = "^0.782"
flake8-annotations = "^2.3.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["grand_exchanger"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
